# hero_api

./: .gitignore  check.py  config.py  pyproject.toml
hero_api/: main.py
hero_api/crud/: hero_crud.py  team_crud.py
hero_api/models/: hero_model.py  team_hero_model.py  team_model.py
hero_api/routers/: hero.py  team.py
tests/: test_hero.py
